processed/jira/txt/LU/LU-5322.txt
Key:        LU-5322
Summary:    support for 3.16 linux kernel
Link:       https://jira.whamcloud.com/browse/LU-5322
Type:       Improvement
Priority:   Minor
Status:     Resolved
Resolution: Fixed
Assignee:   Bob Glossman
Reporter:   Bob Glossman
Created:    Thu, 10 Jul 2014 17:08:16 +0000
Updated:    Thu, 19 Feb 2015 20:02:58 +0000
Resolved:   Wed, 18 Feb 2015 21:47:47 +0000
Links:      Related: is related to  LU-4993; Related: is related to LU-5609; Related: is related to LU-6260

--- Environment ---
fc20

--- Description ---
tracker for 3.16 kernel support

all mods for kernel versions > 3.14 should be collected here

fc20 recently bumped their kernel version from 3.14.x to 3.15.x

new build failures are now showing up

Some issues already mentioned in comments in LU-4993

--- Comment (bogl, Thu, 19 Feb 2015 20:02:58 +0000) ---
please track issues for later lustre versions in LU-6260

--- Comment (simmonsja, Thu, 19 Feb 2015 19:34:13 +0000) ---
Sorry I have been busy doing other clean ups. I plan to complete this for Lustre 2.8.

--- Comment (bastianneuburger, Thu, 19 Feb 2015 17:26:43 +0000) ---
Still experiencing the build failure described by Bob on 15/Sep/14 with today's master (commit: 4de90170e2573321e7691364d1d527aedfd25ff9). As far as I understand the problem in this case are the changes to VFS from Linux 3.15 to 3.16. Documentation/filesystems/vfs.txt demands the following signature for direct_IO:

  ssize_t (*direct_IO)(int, struct kiocb *, struct iov_iter *iter, loff_t offset); 

whereas rw26.c in master has 

  static ssize_t ll_direct_IO_26(int rw, struct kiocb *iocb,  const struct iovec *iov, loff_t file_offset, unsigned long nr_segs)

which is ok until including Kernel 3.15 but not anymore for 3.16.

The upstream kernel lustre client has a matching function signature for it.

--- Comment (jlevi, Wed, 18 Feb 2015 21:47:47 +0000) ---
Patches landed to Master.

--- Comment (bogl, Tue, 23 Sep 2014 20:21:53 +0000) ---
similar build failure also seen in fc21 alpha, just announced.  it also has a 3.16 kernel, just like fc20.

--- Comment (bogl, Mon, 15 Sep 2014 15:30:59 +0000) ---
fc20 just recently jumped from a 3.15.x kernels to 3.16.2-200.fc20.  With the switch to 3.16 now seeing new build failures, even in client only builds.  example errors:

  CC [M]  /home/bogl/lustre-release/lustre/llite/llite_capa.o
  CC [M]  /home/bogl/lustre-release/lustre/llite/rw26.o
/home/bogl/lustre-release/lustre/llite/rw26.c:700:9: error: initialization from incompatible pointer type [-Werror]
         .direct_IO      = ll_direct_IO_26,
         ^
/home/bogl/lustre-release/lustre/llite/rw26.c:700:9: error: (near initialization for ‘ll_aops.direct_IO’) [-Werror]
cc1: all warnings being treated as errors
make[6]: *** [/home/bogl/lustre-release/lustre/llite/rw26.o] Error 1
make[5]: *** [/home/bogl/lustre-release/lustre/llite] Error 2
make[4]: *** [/home/bogl/lustre-release/lustre] Error 2
make[3]: *** [_module_/home/bogl/lustre-release] Error 2
make[3]: Leaving directory `/usr/src/kernels/3.16.2-200.fc20.x86_64'
make[2]: *** [modules] Error 2
make[2]: Leaving directory `/home/bogl/lustre-release'
make[1]: *** [all-recursive] Error 1
make[1]: Leaving directory `/home/bogl/lustre-release'
make: *** [all] Error 2

--- Comment (bogl, Fri, 11 Jul 2014 14:03:47 +0000) ---
James, Yes, that help's a lot.  With those patches I can build client-only again in 3.15+. I will need to refresh the ldiskfs patches before I can build servers.  Changes from the 3.12 reference set are a bit more than those I had for 3.14.

--- Comment (simmonsja, Fri, 11 Jul 2014 13:30:31 +0000) ---
Bob does this help ?

--- Comment (simmonsja, Thu, 10 Jul 2014 21:50:24 +0000) ---
http://review.whamcloud.com/#/c/11058

http://review.whamcloud.com/#/c/11059
